--- a/nba.html
+++ b/nba.html
@@ -121,164 +121,338 @@
      Upcoming Soccer Events
     </h2>
     <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-1">
-        Detroit Pistons vs Boston Celtics
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Detroit Pistons vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        November 26, 2025 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 2:00 PM:00" data-start="November 26, 2025 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         New York Knicks vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        November 26, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 4:00 PM:00" data-start="November 26, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Milwaukee Bucks vs Miami Heat
+        </a>
+       </td>
+       <td>
+        November 26, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Indiana Pacers vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        November 26, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Minnesota Timberwolves vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        November 26, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Memphis Grizzlies vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        November 26, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 5:00 PM:00" data-start="November 26, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Houston Rockets vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        November 26, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         San Antonio Spurs vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        November 26, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Phoenix Suns vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        November 26, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <h2>
+     NBA Schedule for November 28, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Cleveland Cavaliers vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        November 28, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 4:30 PM:00" data-start="November 28, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Philadelphia 76ers vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        November 28, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 4:30 PM:00" data-start="November 28, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Chicago Bulls vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        November 28, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 4:30 PM:00" data-start="November 28, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Orlando Magic vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        November 28, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 4:30 PM:00" data-start="November 28, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Washington Wizards vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        November 28, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 4:30 PM:00" data-start="November 28, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Milwaukee Bucks vs New York Knicks
+        </a>
+       </td>
+       <td>
+        November 28, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 4:30 PM:00" data-start="November 28, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Phoenix Suns vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        November 28, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 6:30 PM:00" data-start="November 28, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         San Antonio Spurs vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        November 28, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 6:30 PM:00" data-start="November 28, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Sacramento Kings vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 28, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 6:30 PM:00" data-start="November 28, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Dallas Mavericks vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        November 28, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 7:00 PM:00" data-start="November 28, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-11">
+         Memphis Grizzlies vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        November 28, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 7:00 PM:00" data-start="November 28, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
        </a>
-      </td>
-      <td>
-       November 26, 2025 2:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 2:00 PM:00" data-start="November 26, 2025 2:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-2">
-        New York Knicks vs Charlotte Hornets
-       </a>
-      </td>
-      <td>
-       November 26, 2025 4:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 4:00 PM:00" data-start="November 26, 2025 4:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-3">
-        Milwaukee Bucks vs Miami Heat
-       </a>
-      </td>
-      <td>
-       November 26, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-4">
-        Indiana Pacers vs Toronto Raptors
-       </a>
-      </td>
-      <td>
-       November 26, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-5">
-        Minnesota Timberwolves vs Oklahoma City Thunder
-       </a>
-      </td>
-      <td>
-       November 26, 2025 4:30 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-6">
-        Memphis Grizzlies vs New Orleans Pelicans
-       </a>
-      </td>
-      <td>
-       November 26, 2025 5:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 5:00 PM:00" data-start="November 26, 2025 5:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-7">
-        Houston Rockets vs Golden State Warriors
-       </a>
-      </td>
-      <td>
-       November 26, 2025 7:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-8">
-        San Antonio Spurs vs Portland Trail Blazers
-       </a>
-      </td>
-      <td>
-       November 26, 2025 7:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nba-streams-9">
-        Phoenix Suns vs Sacramento Kings
-       </a>
-      </td>
-      <td>
-       November 26, 2025 7:00 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-     <li class="nav-item">
-      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-       Stream Request (Discord)
-      </a>
-     </li>
-    </ul>
-    <p class="mb-0 text-body-secondary text-center text-lg-start">
-     Roxiestreams © 2024
-    </p>
-   </footer>
-   <script src="js/bootstrap.bundle.min.js">
-   </script>
-   <script>
-    function startCountdown() {
+      </li>
+     </ul>
+     <p class="mb-0 text-body-secondary text-center text-lg-start">
+      Roxiestreams © 2024
+     </p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js">
+    </script>
+    <script>
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -307,7 +481,8 @@
         }
 
         window.onload = startCountdown;
-   </script>
+    </script>
+   </div>
   </div>
  </body>
 </html>
