--- a/nfl.html
+++ b/nfl.html
@@ -179,6 +179,40 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NFL Schedule for Friday, November 28, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Chicago Bears vs Philadelphia Eagles
+        </a>
+       </td>
+       <td>
+        November 28, 2025 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 29, 2025 12:00 PM:00" data-start="November 28, 2025 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
