--- a/soccer.html
+++ b/soccer.html
@@ -95,19 +95,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Aston Villa vs Young Boys</a>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Borussia M'gladbach vs RB Leipzig</a>
+<td>November 28, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Como vs Sassuolo</a>
+<td>November 27, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Metz vs Rennes</a>
 <td>November 27, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Feyenoord vs Celtic</a>
-<td>November 27, 2025 09:45 AM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Roma vs Midtjylland</a>
-<td>November 27, 2025 09:45 AM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Porto vs Nice</a>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Getafe vs Elche</a>
 <td>November 27, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
