--- a/nba.html
+++ b/nba.html
@@ -118,153 +118,7 @@
   <div class="container container-fluid pt-2 text-white">
    <div class="mt-5">
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming Soccer Events
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-1">
-         Detroit Pistons vs Boston Celtics
-        </a>
-       </td>
-       <td>
-        November 26, 2025 2:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 2:00 PM:00" data-start="November 26, 2025 2:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-2">
-         New York Knicks vs Charlotte Hornets
-        </a>
-       </td>
-       <td>
-        November 26, 2025 4:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 4:00 PM:00" data-start="November 26, 2025 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-3">
-         Milwaukee Bucks vs Miami Heat
-        </a>
-       </td>
-       <td>
-        November 26, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-4">
-         Indiana Pacers vs Toronto Raptors
-        </a>
-       </td>
-       <td>
-        November 26, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-5">
-         Minnesota Timberwolves vs Oklahoma City Thunder
-        </a>
-       </td>
-       <td>
-        November 26, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 4:30 PM:00" data-start="November 26, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         Memphis Grizzlies vs New Orleans Pelicans
-        </a>
-       </td>
-       <td>
-        November 26, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 5:00 PM:00" data-start="November 26, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Houston Rockets vs Golden State Warriors
-        </a>
-       </td>
-       <td>
-        November 26, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         San Antonio Spurs vs Portland Trail Blazers
-        </a>
-       </td>
-       <td>
-        November 26, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-9">
-         Phoenix Suns vs Sacramento Kings
-        </a>
-       </td>
-       <td>
-        November 26, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 27, 2025 7:00 PM:00" data-start="November 26, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <h2>
-     NBA Schedule for November 28, 2025
+     Upcoming NBA Events
     </h2>
     <table id="eventsTable">
      <thead>
