--- a/soccer.html
+++ b/soccer.html
@@ -100,50 +100,34 @@
 <td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Como vs Sassuolo</a>
-<td>November 27, 2025 11:45 AM</td>
+<td>November 28, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Metz vs Rennes</a>
-<td>November 27, 2025 09:45 AM</td>
+<td>November 28, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Getafe vs Elche</a>
-<td>November 27, 2025 09:45 AM</td>
+<td>November 28, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Aberdeen vs Noah</a>
-<td>November 27, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Cobresal vs Colo Colo</a>
+<td>November 28, 2025 13:30 PM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Strasbourg vs Crystal Palace</a>
-<td>November 27, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Juventude vs Bahia</a>
+<td>November 28, 2025 14:00 PM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Shamrock Rovers vs Shakhtar Donetsk</a>
-<td>November 27, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Vasco Da Gama vs Internacional</a>
+<td>November 28, 2025 14:30 PM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Rangers vs Sporting Braga</a>
-<td>November 27, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Santos vs Sport Recife</a>
+<td>November 28, 2025 16:30 PM</td>
 <td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Nottingham Forest vs Malmö FF</a>
-<td>November 27, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Maccabi Tel Aviv vs Lyon</a>
-<td>November 27, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Fluminense vs São Paulo</a>
-<td>November 27, 2025 15:30 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 14:30:00" data-start="November 27, 2025 15:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Guadalajara vs Cruz Azul</a>
-<td>November 27, 2025 18:07 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 17:07:00" data-start="November 27, 2025 18:07:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
