--- a/fighting.html
+++ b/fighting.html
@@ -96,7 +96,7 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdow</a></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
 <td>November 28, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 28, 2025 17:00:00"></span></td>
 </tr>
