--- a/soccer.html
+++ b/soccer.html
@@ -97,37 +97,37 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Borussia M'gladbach vs RB Leipzig</a>
 <td>November 28, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 10:30:00" data-start="November 28, 2025 11:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Como vs Sassuolo</a>
 <td>November 28, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 10:45:00" data-start="November 28, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Metz vs Rennes</a>
 <td>November 28, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 10:45:00" data-start="November 28, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Getafe vs Elche</a>
 <td>November 28, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 11:00:00" data-start="November 28, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Cobresal vs Colo Colo</a>
 <td>November 28, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 12:30:00" data-start="November 28, 2025 13:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Juventude vs Bahia</a>
 <td>November 28, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 13:00:00" data-start="November 28, 2025 14:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Vasco Da Gama vs Internacional</a>
 <td>November 28, 2025 14:30 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 13:30:00" data-start="November 28, 2025 14:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-8">Santos vs Sport Recife</a>
 <td>November 28, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="November 29, 2025 15:30:00" data-start="November 28, 2025 16:30:00"></span></td>
 <tr>
-</tbody></table>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
