--- a/index.html
+++ b/index.html
@@ -118,14 +118,24 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">UEFA Europa League</td>
-                    <td>November 27, 2025 09:45 AM</td>
-                    <td><span class="countdown-timer" data-start="November 27, 2025 09:45:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Laliga</td>
+                    <td>November 28, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 28, 2025 12:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL Thanksgiving Games</td>
-                    <td>November 27, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 27, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL BlackFriday</td>
+                    <td>November 28, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 28, 2025 12:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/nba">NBA</td>
+                    <td>November 28, 2025 16:30 PM</td>
+                    <td><span class="countdown-timer" data-start="November 28, 2025 16:30:00" data-end="November 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</td>
+                    <td>November 28, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 28, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
