--- a/nfl.html
+++ b/nfl.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
+
 <html data-bs-theme="dark" lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>
    Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
   </title>
-  <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
-  <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
-  <link href="https://fonts.googleapis.com" rel="preconnect"/>
-  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-  <link href="css/main.css" rel="stylesheet" type="text/css"/>
-  <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-  <style>
+<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<link href="css/main.css" rel="stylesheet" type="text/css"/>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<style>
    <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -63,172 +64,224 @@
             color: pink;
         }
   </style>
- </head>
- <body>
-  <nav class="navbar navbar-expand-lg bg-black">
-   <div class="container-fluid">
-    <a class="navbar-brand" href="https://roxiestreams.live/">
+</head>
+<body>
+<nav class="navbar navbar-expand-lg bg-black">
+<div class="container-fluid">
+<a class="navbar-brand" href="https://roxiestreams.live/">
      RoxieStreams
     </a>
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-     <span class="navbar-toggler-icon">
-     </span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/soccer">
+<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+<span class="navbar-toggler-icon">
+</span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<li class="nav-item">
+<a class="nav-link" href="https://roxiestreams.live/soccer">
         Soccer
        </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/mlb">
+</li>
+<li class="nav-item">
+<a class="nav-link" href="https://roxiestreams.live/mlb">
         MLB
        </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/nba">
+</li>
+<li class="nav-item">
+<a class="nav-link" href="https://roxiestreams.live/nba">
         NBA
        </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/nfl">
+</li>
+<li class="nav-item">
+<a class="nav-link" href="https://roxiestreams.live/nfl">
         NFL
        </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/fighting">
+</li>
+<li class="nav-item">
+<a class="nav-link" href="https://roxiestreams.live/fighting">
         Fighting
        </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/motorsports">
+</li>
+<li class="nav-item">
+<a class="nav-link" href="https://roxiestreams.live/motorsports">
         Motorsports
        </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
+</li>
+<li class="nav-item">
+<a class="nav-link" href="https://discord.gg/JhkVmejRmn">
         Stream Request (Discord)
        </a>
-      </li>
-     </ul>
-    </div>
-   </div>
-  </nav>
-  <div class="container container-fluid pt-2 text-white">
-   <div class="mt-5">
-    <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming Soccer Events
+</li>
+</ul>
+</div>
+</div>
+</nav>
+<div class="container container-fluid pt-2 text-white">
+<div class="mt-5">
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
+     Upcoming NFL Events
     </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
+<table id="eventsTable">
+<thead>
+<tr>
+<th>
         Event
        </th>
-       <th>
+<th>
         Start Time
        </th>
-       <th>
+<th>
         Countdown
        </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         Green Bay Packers vs Detroit Lions
-        </a>
-       </td>
-       <td>
-        November 27, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 28, 2025 10:00 AM:00" data-start="November 27, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-2">
-         Kansas City Chiefs vs Dallas Cowboys
-        </a>
-       </td>
-       <td>
-        November 27, 2025 1:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 28, 2025 1:30 PM:00" data-start="November 27, 2025 1:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-3">
-         Cincinnati Bengals vs Baltimore Ravens
-        </a>
-       </td>
-       <td>
-        November 27, 2025 5:20 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 28, 2025 5:20 PM:00" data-start="November 27, 2025 5:20 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <h2>
-     NFL Schedule for Friday, November 28, 2025
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+<a href="https://roxiestreams.live/nfl-streams-1">
          Chicago Bears vs Philadelphia Eagles
         </a>
-       </td>
-       <td>
-        November 28, 2025 12:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 29, 2025 12:00 PM:00" data-start="November 28, 2025 12:00 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-      <li class="nav-item">
-       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-      </li>
-     </ul>
-     <p class="mb-0 text-body-secondary text-center text-lg-start">
-      Roxiestreams © 2024
-     </p>
-    </footer>
-    <script src="js/bootstrap.bundle.min.js">
-    </script>
-    <script>
-     function startCountdown() {
+<td>
+         November 28, 2025 12:00 PM
+        </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 11:00:00" data-start="November 28, 2025 12:00:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-2">
+           Air Force vs Colorado State
+          </a>
+<td>
+           November 28, 2025 12:00 PM
+          </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 11:00:00" data-start="November 28, 2025 12:00:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-3">
+             Georgia vs Georgia Tech
+            </a>
+<td>
+             November 28, 2025 12:30 PM
+            </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 11:30:00" data-start="November 28, 2025 12:30:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-4">
+               Temple vs North Texas
+              </a>
+<td>
+               November 28, 2025 12:30 PM
+              </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 11:30:00" data-start="November 28, 2025 12:30:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-5">
+                 San Diego State vs New Mexico
+                </a>
+<td>
+                 November 28, 2025 12:30 PM
+                </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 11:30:00" data-start="November 28, 2025 12:30:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-6">
+                   Boise State vs Utah State
+                  </a>
+<td>
+                   November 28, 2025 13:00 PM
+                  </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 12:00:00" data-start="November 28, 2025 13:00:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-7">
+                     Indiana vs Purdue
+                    </a>
+<td>
+                     November 28, 2025 16:30 PM
+                    </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 15:30:00" data-start="November 28, 2025 16:30:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-8">
+                       Texas A&amp;M vs Texas
+                      </a>
+<td>
+                       November 28, 2025 16:30 PM
+                      </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 15:30:00" data-start="November 28, 2025 16:30:00">
+</span>
+</td>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-9">
+                         Arizona vs Arizona State
+                        </a>
+<td>
+                         November 28, 2025 17:00 PM
+                        </td>
+<td>
+<span class="countdown-timer" data-end="November 29, 2025 16:00:00" data-start="November 28, 2025 17:00:00">
+</span>
+</td>
+<tr>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</td>
+</tr>
+</tbody>
+</table>
+<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+<li class="nav-item">
+<a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+       Stream Request (Discord)
+      </a>
+</li>
+</ul>
+<p class="mb-0 text-body-secondary text-center text-lg-start">
+     Roxiestreams © 2024
+    </p>
+</footer>
+<script src="js/bootstrap.bundle.min.js">
+</script>
+<script>
+    function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -257,8 +310,7 @@
         }
 
         window.onload = startCountdown;
-    </script>
-   </div>
-  </div>
- </body>
+   </script>
+</div>
+</div></body>
 </html>
