--- a/nba-streams-10.html
+++ b/nba-streams-10.html
@@ -98,6 +98,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nba10.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nba10alt.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
